2006-12-28  Daiki Ueno  <ueno@unixuser.org>

	* gnus-sum.el (gnus-summary-next-article): Make sure we are in the
	summary buffer.

2006-12-27  Reiner Steib  <Reiner.Steib@gmx.de>

	* spam.el (spam-ifile-path, spam-ifile-database-path)
	(spam-bogofilter-path): Use define-obsolete-variable-alias instead of
	make-obsolete-variable.

2006-12-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-make-fqdn): Fix comment.
	(message-bogus-system-names): Add ".local".

	* spam.el (spam-ifile-path, spam-ifile-program)
	(spam-ifile-database-path, spam-ifile-database)
	(spam-bogofilter-path, spam-bogofilter-program): Rename variables.
	Don't use "path" inappropriately.
	(spam-spamoracle-database, spam-get-ifile-database-parameter): Fix doc
	strings.
	(spam-check-ifile, spam-ifile-register-with-ifile)
	(spam-check-bogofilter, spam-bogofilter-register-with-bogofilter): Use
	new variable names.

	* gnus-art.el (gnus-treat-display-x-face, gnus-treat-display-face)
	(gnus-treat-display-smileys): Simplify using
	gnus-image-type-available-p.

	* gnus-ems.el (gnus-image-type-available-p): Use display-images-p if
	available.

	* gnus-xmas.el (gnus-xmas-image-type-available-p): Use
	`display-images-p' if available.

2006-12-25  Daiki Ueno  <ueno@unixuser.org>

	* pgg-def.el (pgg-passphrase-coding-system): Default to nil instead of
	locale-coding-system.
	* pgg-gpg.el (pgg-gpg-process-region): Encode passphrase with eol-type
	LF.

2006-12-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnrss.el (nnrss-fetch): Replace buffer's contents with the decoded
	one after turning on the buffer's multibyteness instead of decoding
	them directly in the unibyte buffer that causes unexpected conversion
	in Emacs 23 (unicode).

2006-12-20  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-group.el (gnus-group-tool-bar-gnome): Exchange connect and
	disconnect icons.  Add help text.

2006-12-13  Reiner Steib  <Reiner.Steib@gmx.de>

	* legacy-gnus-agent.el: Add Copyright notice.
