@@ -1,3 +1,8 @@
+2006-12-28  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* spam.el: Revert to make-obsolete-variable because
+	define-obsolete-variable-alias is not supported in Emacs 21.
+
 2006-12-28  Daiki Ueno  <ueno@unixuser.org>
 
 	* gnus-sum.el (gnus-summary-next-article): Make sure we are in the
